criando funções e organizando as páginas

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <label for="senha">Senha:</label>
                 <input type="password" id="campoPassword" name="senha" required>
 
-                <input type="submit" name="Entrar" class="bntproj" onclick="fetchApiSubmitLogin()">
+                <input type="button" name="Entrar" class="bntproj" onclick="fetchApiSubmitLogin(); fecharLogin()">
             </div>
         </div>
 
