--- a/cadastroPonto.html
+++ b/cadastroPonto.html
@@ -61,7 +61,7 @@
                     <label for="nomefantasia">Nome fantasia/Razão Social:*</label>
                     <input type="text" id="nome" name="nomefantasia" placeholder="Mercado do José" required>
 
-                    <label for="telefone">Rua:*</label>
+                    <label for="telefone">Telefone:*</label>
                     <input type="number" id="telefone" name="telefone" required>
 
                     <label for="logradouro">Rua:*</label>
@@ -88,14 +88,8 @@
 
                     <label for="quantidade">Quantidade(kg):</label>
                     <input type="number" id="quantidade" name="quantidade">
-
-                    <!-- <select id="frequencia">
-                        <option value="unica" selected>Única</option>
-                        <option value="semanal">Semanal</option>
-                        <option value="mensal">Mensal</option>
-                    </select> -->
-
-                    <input type="submit" name="Enviar" onclick="fetchApiSubmit()">
+                    
+                    <input type="button" name="Enviar" onclick="fetchApiSubmit()">
 
                 </div>
             </div>
@@ -115,7 +109,7 @@
                 <label for="senha">Senha:</label>
                 <input type="password" id="campoPassword" name="senha" required>
 
-                <input type="submit" name="Entrar" class="bntproj" onclick="fetchApiSubmitLogin()">
+                <input type="button" name="Entrar" class="bntproj" value="Entrar" id="btnEntrar" onclick="fetchApiSubmitLogin(); fecharLogin()">
             </div>
         </div>
 
