--- a/parceiros.html
+++ b/parceiros.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav class="menu">
-            <a class="logo" href="/">Logo</a>
+            <a class="logo" href="/">Sustenta-Tech</a>
 
             <div class="mobile-menu">
                 <div class="line1"></div>
@@ -162,7 +162,7 @@
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto3.jfif" alt="">
+                    <img src="./Imagens/img tratadas/Cards/foto3.jfif" alt="foto">
                     <h3>Ítalo Guerra</h3>
 
                 </div>
@@ -183,7 +183,7 @@
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto1.jfif" alt="">
+                    <img src="./Imagens/img tratadas/Cards/foto1.jfif" alt="foto">
                     <h3>Alexia Meirelles</h3>
                 </div>
 
@@ -202,7 +202,7 @@
 
         <div id="container">
             <div id="carta">
-                <div id="frente"><img src="./Imagens/img tratadas/Cards/foto2.jfif" alt="">
+                <div id="frente"><img src="./Imagens/img tratadas/Cards/foto2.jfif" alt="foto">
                     <h3>João Medeiros</h3>
                 </div>
 
