--- a/parceiros.html
+++ b/parceiros.html
@@ -217,7 +217,7 @@
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto4.jfif" alt="">
+                    <img src="./Imagens/img tratadas/Cards/foto4.jfif" alt="foto">
                     <h3>Priscila Sena</h3>
                 </div>
 
@@ -234,14 +234,14 @@
     </section>
 
     <div id="voltarTopo">
-        <a href="#" id="subir"><img src="./Imagens/img tratadas/icons/seta-para-cima.png" alt=""></a>
+        <a href="#" id="subir"><img src="./Imagens/img tratadas/icons/seta-para-cima.png" alt="seta para cima"></a>
     </div>
 
     <footer id="footer-content">
         <div class="media-content">
 
             <p>Endereço: Av Bernado Vieira de Melo, 1402. </p>
-            <p> Viagem - Recife/PE </p>
+            <p> Boa Viagem - Recife/PE </p>
             <p>E-mail: residuo.organico@gmail.com </p>
             <p>Telefone: 81-98869.3599 </p>
             <figure>
