fix ordem da lista parceiros

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </main>
 
     <div class="formulario-modal">
-        <form>
+        <form  autocomplete="on">
             <div class="form-doador">
 
                 <div class="fechar" onclick="fechar()">✘</div>
