--- a/parceiros.html
+++ b/parceiros.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            
+
             <ul class="ul-vazia retangEnderecos"></ul>
 
             <div class="retangEnderecos">
@@ -115,16 +115,15 @@
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto3.jfif" alt="foto">
-                    <h3>Ítalo Guerra</h3>
+                    <img src="./Imagens/img tratadas/Cards/Toninho.jpeg" alt="Supermercado Toinho Economia">
+                    <h3>Antônio Gonçalves</h3>
+                    <h4>Proprietário</h4>
 
                 </div>
 
                 <div id="atras">
                     <h2>Depoimento</h2>
-                    <p>“Após aderir ao projeto Resíduos Orgânicos, percebi que estou tendo maior rendimento, qualidade e uniformidade nas coletas. O nosso foco agora é despedício zero”
-
-                    </p>
+                    <p>“Achei a ideia boa e agregadora. Sou comerciante de gênero alimentícios e a perca é inevitável. Poder fazer essa ponte para o reaproveitamento é muito bacana e quero ser parceiro”</p>
                 </div>
 
             </div>
@@ -133,13 +132,15 @@
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto1.jfif" alt="foto">
-                    <h3>Alexia Meirelles</h3>
+                    <img src="./Imagens/img tratadas/Cards/João.jpeg" alt="foto">
+                    <h3>Supermercado do João</h3>
+                    <h4>Proprietário</h4>
                 </div>
 
                 <div id="atras">
                     <h2>Depoimento</h2>
-                    <p>"Gostaria de parabenizar a todos que fazem parte deste projeto. Soluções como essa que visam a sustentabilidade e redução de desperdício são fundamentais nos dias atuais."
+                    <p>""Tenho mercado a mais de 20 anos, e as sobras de alimentos maior parte Hort-Fruti sempre deu muito trabalho pra dar fim. Achei a ideia boa demais, s Gostaria sim de participar e ter pessoas certas para retirar esses alimentos do meu
+                        deposito."
                     </p>
 
 
@@ -152,13 +153,14 @@
 
         <div id="container">
             <div id="carta">
-                <div id="frente"><img src="./Imagens/img tratadas/Cards/foto2.jfif" alt="foto">
-                    <h3>João Medeiros</h3>
+                <div id="frente"><img src="./Imagens/img tratadas/Cards/agricultor.jpg" alt="foto">
+                    <h3>Adriano e Fernanda</h3>
+                    <h4>Agricultores</h4>
                 </div>
 
                 <div id="atras">
                     <h2>Depoimento</h2>
-                    <p>"Levando em consideração o desperdício, sustentabilidade e rentabilidade, sempre buscamos soluções eficientes e inovadoras."
+                    <p>"A agricultura familiar faz parte da nossa vida. Ainda damos a destinação correta ao que sobra. Agora teremos essa ajuda. Adoramos a iniciativa"
                         <p>
                 </div>
             </div>
