--- a/parceiros.html
+++ b/parceiros.html
@@ -186,14 +186,14 @@
     </section>
 
     <div id="voltarTopo">
-        <a href="#" id="subir"><img src="./Imagens/img tratadas/icons/seta-para-cima.png" alt="seta para cima"></a>
+        <a href="#" id="subir"><img src="./Imagens/img tratadas/icons/seta-para-cima.png" alt="Seta para cima"></a>
     </div>
 
     <footer id="footer-content">
         <div class="media-content">
 
             <p>Endereço: Av Bernado Vieira de Melo, 1402. </p>
-            <p> Boa Viagem - Recife/PE </p>
+            <p>Boa Viagem - Recife/PE </p>
             <p>E-mail: residuo.organico@gmail.com </p>
             <p>Telefone: 81-98869.3599 </p>
             <figure>
