--- a/cadastroPonto.html
+++ b/cadastroPonto.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav class="menu">
-            <a class="logo" href="/">Logo</a>
+          <a class="logo" href="/"> <img src="/Imagens/logo.png" /> </a>
 
             <div class="mobile-menu">
                 <div class="line1"></div>
