--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <nav class="menu">
-            <a class="logo" href="/">LOGO</a>
+          <a class="logo" href="/"> <img src="/Imagens/logo.png" /> </a>
 
             <div class="mobile-menu">
                 <div class="line1"></div>
