--- a/parceiros.html
+++ b/parceiros.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <nav class="menu">
-        <a class="logo" href="/">Sustenta-Tech</a>
+        <a class="logo" href="/"> <img src="/Imagens/logo.png" /> </a>
 
         <div class="mobile-menu">
           <div class="line1"></div>
