--- a/parceiros.html
+++ b/parceiros.html
@@ -36,7 +36,7 @@
       <div class="opacity">
         <div class="box">
           <div class="text-box">
-            <h3>Seja um doador parceiro</h3>
+            <h3>Veja o locais de retirada</h3>
             <p>
               <i
                 >Contra o desperdício!<br />
