--- a/cadastroPonto.html
+++ b/cadastroPonto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/formulario.css">
-    <link rel="stylesheet" href="./css/pontosColeta.css">
+    <link rel="stylesheet" href="./css/cadastroPonto.css">
 
 
 
@@ -40,10 +40,20 @@
         </nav>
     </header>
     <main>
-        <div class="opacity">
-            <div class="box">
-            </div>
+      <div class="opacity">
+        <div class="box">
+          <div class="text-box">
+            <h3>Seja um doador parceiro</h3>
+            <p>
+              <i
+                >Contra o desperdício!<br />
+                Pela Sustentabilidade e a vida no nosso PLANETA!</i
+              >
+            </p>
+            <a href="#" onclick="abrir()">Cadastre-se!</a>
+          </div>
         </div>
+      </div>
         <section class="cadastro">
             <div class="texto-cadastro">
                 <h2>Cadastre um ponto de coleta de resíduos orgânicos!</h2>
