--- a/cadastroPonto.html
+++ b/cadastroPonto.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/formulario.css">
     <link rel="stylesheet" href="./css/cadastroPonto.css">
+    <link rel="icon" href="./Imagens/favicon.jpg" type="image/x-icon">
 
 
 
