--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/formulario.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/carousel.css">
+    <link rel="icon" href="./Imagens/favicon.jpg" type="image/x-icon">
 
 
 
