--- a/cadastroPonto.html
+++ b/cadastroPonto.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav class="menu">
-            <a class="logo" href="/">Sustenta-Tech</a>
+            <a class="logo" href="./index.html">Sustenta-Tech</a>
 
             <div class="mobile-menu">
                 <div class="line1"></div>
