--- a/parceiros.html
+++ b/parceiros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/formulario.css" />
     <link rel="stylesheet" href="./css/pontosColeta.css" />
-    <link rel="icon" href="./Imagens/favicon.jpg" type="image/x-icon" />
+    <link rel="icon" href="./Imagens/logotipo.png" type="image/x-icon" />
 
     <title>Resíduos Orgânicos</title>
   </head>
