--- a/parceiros.html
+++ b/parceiros.html
@@ -138,13 +138,7 @@ l
 
                 <h2>Realize o login para continuar!</h2>
                 <br />
-
-                <label for="login">Login:</label>
-                <input type="text" id="campoLogin" name="login" placeholder="exemplo@email.com" required />
-
-                <label for="senha">Senha:</label>
-                <input type="password" id="campoPassword" name="senha" required />
-
+                
                 <label for="login">Login:</label>
                 <input type="text" id="campoLogin" name="login" placeholder="exemplo@email.com" required>
 
@@ -157,23 +151,8 @@ l
         </div>
         </div>
 
-        <!-- <div class="searchCity">
-            <h3>Encontre estabelecimentos parceiros na sua região</h3>
-            <input type="text" name="cityList" id="cityList" list="cidadescadastradas" />
-            <datalist id="cidadescadastradas">
-                <option value="Belo Horizonte">Belo Horizonte</option>
-                <option value="Montenegro">Montenegro</option>
-                <option value="São Paulo">São Paulo</option>
-                <option value="Porto Alegre">Porto Alegre</option>
-            </datalist>
-        </div>
         
-        <section class="listaPontosdeColeta">
-            <div class="titulo">
-                <h2>Locais cadastrados</h2>
-            </div>
-        </section>
-    </main>     -->
+    </main>   
 
     <section class="sections">
         <div style="margin: 20px;">
