--- a/parceiros.html
+++ b/parceiros.html
@@ -60,34 +60,7 @@ l
             </p>
             <a href="#" onclick="abrir()">Cadastre-se!</a>
           </div>
-        </div>
-
-        <!-- <section class="sections" style="height: 1000px;">
-            <div style="margin: 20px;">
-                <h2>Pesquise os pontos de coleta cadastrados:</h2>
-            </div>
-            <div class="input-pesquisa">
-
-                <input type="button" value="Pesquisar" classe="pesquisar" onclick="fetchApiPesquisaTodos()"
-                    style="width: 200px;">
-            </div>
-            <div class="container-cidades">
-
-            </div>
-        </section>
-
-        <section class="sections">
-            <div style="margin: 20px;">
-                <h2>Pesquise os pontos de coleta perto de você:</h2>
-            </div>
-            <div class="input-pesquisa">
-                <input type="text" placeholder="Cidade" id="nomeCidade">
-                <input type="button" value="Pesquisar" class="pesquisar" onclick="fetchApiPesquisa()">
-            </div>
-            <div class="container-cidades">
-    
-            </div>
-        </section> -->
+        </div>        
 
         <div class="formulario-modal">
             <form autocomplete="on">
@@ -189,16 +162,14 @@ l
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto3.jfif" alt="foto" />
-                    <h3>Ítalo Guerra</h3>
+                    <img src="./Imagens/depoimentos/toninho.jpeg" alt="foto" />
+                    <h3>Antônio Gonçalves</h3>
                 </div>
 
                 <div id="atras">
                     <h2>Depoimento</h2>
                     <p>
-                        “Após aderir ao projeto Resíduos Orgânicos, percebi que estou
-                        tendo maior rendimento, qualidade e uniformidade nas coletas. O
-                        nosso foco agora é despedício zero”
+                        “Gostei muito do projeto. Tem potencial para ser de muita ajuda principalmente na redução dos resíduos orgânicos que acabam nos lixões.”
                     </p>
                 </div>
             </div>
@@ -207,16 +178,14 @@ l
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto1.jfif" alt="foto" />
-                    <h3>Alexia Meirelles</h3>
+                    <img src="./Imagens/depoimentos/madili.jpg" alt="foto" />
+                    <h3>Marcos Dioni Lima</h3>
                 </div>
 
                 <div id="atras">
                     <h2>Depoimento</h2>
                     <p>
-                        "Gostaria de parabenizar a todos que fazem parte deste projeto.
-                        Soluções como essa que visam a sustentabilidade e redução de
-                        desperdício são fundamentais nos dias atuais."
+                        "A página foi bem feita. Para um projeto iniciante está bem fluida e responsiva, com funcionalidades que apresentam potencial."
                     </p>
                 </div>
             </div>
@@ -225,7 +194,7 @@ l
         <div id="container">
             <div id="carta">
                 <div id="frente">
-                    <img src="./Imagens/img tratadas/Cards/foto2.jfif" alt="foto" />
+                    <img src="./Imagens/depoimentos/mercado.jpeg" alt="foto" />
                     <h3>João Medeiros</h3>
                 </div>
 
@@ -233,14 +202,14 @@ l
                     <h2>Depoimento</h2>
                     <p>
                         "Levando em consideração o desperdício, sustentabilidade e
-                        rentabilidade, sempre buscamos soluções eficientes e inovadoras."
+                        rentabilidade, sempre buscamos soluções eficientes e inovadoras. Ótimo projeto."
                     </p>
                     <p></p>
                 </div>
             </div>
         </div>
 
-        <div id="container">
+        <!-- <div id="container">
             <div id="carta">
                 <div id="frente">
                     <img src="./Imagens/img tratadas/Cards/foto4.jfif" alt="" />
@@ -256,7 +225,7 @@ l
                     </p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <div id="voltarTopo">
