--- a/parceiros.html
+++ b/parceiros.html
@@ -126,7 +126,7 @@ l
 
         
     </main>   
-
+    <!--IMPLEMENTAÇÃO FUTURA
     <section class="sections">
         <div style="margin: 20px;">
             <h2>Pesquise os pontos de coleta cadastrados:</h2>
@@ -139,7 +139,8 @@ l
         <div class="container-cidades">
 
         </div>
-    </section>
+    </section> -->
+
 
     <section class="sections">
         <div style="margin: 20px;">
